--- a/index.html
+++ b/index.html
@@ -2,121 +2,219 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro de Servicio</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f6f8;
-      padding: 30px;
-      color: #333;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 1rem;
+      background-color: #f4f4f4;
     }
-
-    .form-container {
-      max-width: 500px;
+    .container {
+      max-width: 600px;
       margin: auto;
-      background-color: #fff;
-      padding: 25px;
-      border-radius: 10px;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      position: relative;
     }
-
     h2 {
       text-align: center;
-      margin-bottom: 20px;
-      color: #005a9c;
+      margin-bottom: 1rem;
     }
-
     label {
-      font-weight: bold;
-      margin-top: 10px;
       display: block;
+      margin-top: 1rem;
+      font-weight: bold;
     }
-
-    input {
+    input, select, textarea {
       width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      margin-bottom: 15px;
+      padding: 0.5rem;
+      margin-top: 0.3rem;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 4px;
     }
-
+    input[readonly] {
+      background-color: #e9e9e9;
+    }
+    .row {
+      display: flex;
+      gap: 1rem;
+    }
+    .row > div {
+      flex: 1;
+    }
     button {
+      margin-top: 1.5rem;
       width: 100%;
-      padding: 12px;
-      background-color: #005a9c;
+      padding: 0.7rem;
+      background-color: #0078D7;
       color: white;
       border: none;
-      border-radius: 5px;
-      font-size: 16px;
+      border-radius: 4px;
+      font-size: 1rem;
       cursor: pointer;
     }
-
     button:hover {
-      background-color: #004080;
+      background-color: #005ea6;
+    }
+    .watermark {
+      margin-top: 2rem;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #999;
+      font-style: italic;
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <h2>Registro de Servicio</h2>
+    <form id="serviceForm">
+      <label for="folio">FOLIO</label>
+      <input type="text" id="folio" readonly>
 
-  <div class="form-container">
-    <h2>📋 Registro de Servicio</h2>
+      <div class="row">
+        <div>
+          <label for="fecha">FECHA *</label>
+          <input type="text" id="fecha" readonly>
+        </div>
+        <div>
+          <label for="hora">HORA *</label>
+          <input type="text" id="hora" readonly>
+        </div>
+      </div>
 
-    <label for="nombre">Nombre</label>
-    <input id="nombre" placeholder="Ej. Juan Pérez">
+      <label for="telefonista">TELEFONISTA *</label>
+      <input type="text" id="telefonista" required>
 
-    <label for="fecha">Fecha</label>
-    <input id="fecha" placeholder="Ej. 2025-07-29">
+      <label for="direccion">DIRECCIÓN *</label>
+      <input type="text" id="direccion" required>
 
-    <label for="hora">Hora</label>
-    <input id="hora" placeholder="Ej. 14:30">
+      <label for="destino">DESTINO</label>
+      <input type="text" id="destino">
 
-    <label for="ubicacion">Ubicación</label>
-    <input id="ubicacion" placeholder="Ej. Oficina Central">
+      <label for="asignado">ASIGNADOAX *</label>
+      <input type="text" id="asignado" required>
 
-    <label for="tipoServicio">Tipo de servicio</label>
-    <input id="tipoServicio" placeholder="Ej. Mantenimiento">
+      <label for="instrucciones">INSTRUCCIONES ESPECIALES</label>
+      <textarea id="instrucciones" rows="3"></textarea>
 
-    <label for="folio">Folio</label>
-    <input id="folio" placeholder="Ej. 001245">
+      <label for="telefono">TELÉFONO</label>
+      <input type="tel" id="telefono">
 
-    <button id="btnTelegram">Generar y copiar mensaje para Telegram</button>
+      <label for="tipo">TIPO DE SERVICIO</label>
+      <select id="tipo">
+        <option value="">Selecciona</option>
+        <option>Carro amplio</option>
+        <option>2 carros</option>
+        <option>No Tsuru</option>
+        <option>Tsuru</option>
+        <option>Carro sin rotular</option>
+        <option>Pasar corriente</option>
+        <option>Cambio de llanta</option>
+        <option>Mensajería</option>
+        <option>Mensajería compras</option>
+        <option>Paquetería</option>
+        <option>Guía</option>
+        <option>Transporte de mascota</option>
+        <option>Ida y vuelta</option>
+      </select>
+
+      <button type="submit">Registrar Servicio</button>
+    </form>
+    <div class="watermark">
+      Propiedad y diseño de Jesús Sánchez con la colaboración de Microsoft Copilot
+    </div>
   </div>
 
   <script>
-    function construirMensajeTelegram(datos) {
-      return (
-        `📝 *Registro de servicio*\n` +
-        `👤 *Nombre:* ${datos.nombre}\n` +
-        `📅 *Fecha:* ${datos.fecha}\n` +
-        `🕒 *Hora:* ${datos.hora}\n` +
-        `📍 *Ubicación:* ${datos.ubicacion}\n` +
-        `🔧 *Tipo de servicio:* ${datos.tipoServicio}\n` +
-        `🆔 *Folio:* ${datos.folio}`
-      );
+    const webAppUrl = "https://script.google.com/macros/s/AKfycbyXaFGzYJAhF3L_5ZeXvC9t3T7QOI1EmHdca5F-ssdYFhM0kaFW4ceFvz5185NWV8vBSw/exec";
+
+    async function obtenerFolio() {
+      try {
+        const res = await fetch(webAppUrl);
+        const folio = await res.text();
+        document.getElementById("folio").value = folio;
+      } catch (error) {
+        console.error("Error al obtener folio:", error);
+      }
     }
 
-    document.getElementById("btnTelegram").addEventListener("click", async () => {
+    function establecerFechaHora() {
+      const ahora = new Date();
+      const fecha = ahora.toLocaleDateString('es-MX');
+      const hora = ahora.toLocaleTimeString('es-MX', { hour: '2-digit', minute: '2-digit' });
+      document.getElementById('fecha').value = fecha;
+      document.getElementById('hora').value = hora;
+    }
+
+    function construirMensajeTelegram(datos) {
+      return `📋 *Registro de Servicio*\n` +
+             `🆔 Folio: ${datos.folio}\n` +
+             `📅 Fecha: ${datos.fecha} 🕒 Hora: ${datos.hora}\n` +
+             `👤 Telefonista: ${datos.telefonista}\n` +
+             `📍 Dirección: ${datos.direccion}\n` +
+             `➡️ Destino: ${datos.destino || "N/A"}\n` +
+             `🧑‍🔧 AsignadoAX: ${datos.asignado}\n` +
+             `📝 Instrucciones: ${datos.instrucciones || "Ninguna"}\n` +
+             `📞 Teléfono: ${datos.telefono || "N/A"}\n` +
+             `🚗 Tipo de servicio: ${datos.tipo}`;
+    }
+
+    document.getElementById("serviceForm").addEventListener("submit", async function(e) {
+      e.preventDefault();
+
       const datos = {
-        nombre: document.getElementById("nombre").value,
+        folio: document.getElementById("folio").value,
         fecha: document.getElementById("fecha").value,
         hora: document.getElementById("hora").value,
-        ubicacion: document.getElementById("ubicacion").value,
-        tipoServicio: document.getElementById("tipoServicio").value,
-        folio: document.getElementById("folio").value
+        telefonista: document.getElementById("telefonista").value,
+        direccion: document.getElementById("direccion").value,
+        destino: document.getElementById("destino").value,
+        asignado: document.getElementById("asignado").value,
+        instrucciones: document.getElementById("instrucciones").value,
+        telefono: document.getElementById("telefono").value,
+        tipo: document.getElementById("tipo").value
       };
 
-      const mensajeTelegram = construirMensajeTelegram(datos);
-
       try {
-        await navigator.clipboard.writeText(mensajeTelegram);
-        alert("📋 El mensaje ha sido copiado automáticamente. Puedes pegarlo en Telegram.");
-      } catch (err) {
-        console.warn("⚠️ Error al copiar:", err);
-        alert("⚠️ No se pudo copiar el mensaje. Intenta hacerlo manualmente.");
+        // 1. Guardar en Google Sheets
+        const res = await fetch(webAppUrl, {
+          method: "POST",
+          body: JSON.stringify(datos),
+          headers: {
+            "Content-Type": "application/json"
+          }
+        });
+
+        const respuesta = await res.text();
+        alert("✅ Servicio registrado correctamente.");
+
+        // 2. Generar copia virtual para Telegram
+        const mensajeTelegram = construirMensajeTelegram(datos);
+        prompt("📲 Copia este mensaje para pegar en Telegram:", mensajeTelegram);
+
+        // 3. Preguntar si desea limpiar el formulario
+        const limpiar = confirm("¿Deseas capturar otro servicio?");
+        if (limpiar) {
+          document.getElementById("serviceForm").reset();
+          establecerFechaHora();
+          obtenerFolio();
+        }
+
+      } catch (error) {
+        console.error("Error al registrar:", error);
+        alert("❌ Error al registrar el servicio.");
       }
     });
-  </script>
 
+    window.onload = () => {
+      establecerFechaHora();
+      obtenerFolio();
+    };
+  </script>
 </body>
 </html>
